--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,15 @@
         <link rel="stylesheet" href="./css/estilos.css">
     </head>
     <body>
-        <h1>Aqui vamos hace un blog post</h1>
-        <p>Y este es el parrafo</p>
+        <div id="container">
+            <div id="post">
+            </div>
+        </div>
+        <h1>Este es el titulo atractivo
+            e interesante del post </h1>
+        <p>Y este es el parrafo de inicio
+            donde vamos a explicar las
+            cosas increeibles que se pueden
+            hacer con ramas</p>
     </body>
 </html>
