--- a/blogpost.html
+++ b/blogpost.html
@@ -14,5 +14,12 @@
             donde vamos a explicar las
             cosas increeibles que se pueden
             hacer con ramas</p>
+            <p>Los blogs son la mejor
+                forma de compartir
+                informacion y tus ideas.
+                Mucho mas que ir a conferencias 
+                o salir en Youtube.Excepto si eres un
+                rockstar.Pero estadisticamente no lo 
+                eres ... por ahora</p>
     </body>
 </html>
