--- a/blogpost.html
+++ b/blogpost.html
@@ -11,20 +11,24 @@
                    confianza</span>
             </div>
             <div id="post">
+                <h1>Este es el titulo atractivo
+                    e interesante del post </h1>
+                <p>Y este es el parrafo de inicio
+                    donde vamos a explicar las
+                    cosas increeibles que se pueden
+                    hacer con ramas</p>
+                    <p>Los blogs son la mejor
+                        forma de compartir
+                        informacion y tus ideas.
+                        Mucho mas que ir a conferencias 
+                        o salir en Youtube.Excepto si eres un
+                        rockstar.Pero estadisticamente no lo 
+                        eres ... por ahora</p>
+                        <p>Suscribete y dale like</p>
+            </div>
+            <div id="footer">
+             Hecho con esfuerzo 
             </div>
         </div>
-        <h1>Este es el titulo atractivo
-            e interesante del post </h1>
-        <p>Y este es el parrafo de inicio
-            donde vamos a explicar las
-            cosas increeibles que se pueden
-            hacer con ramas</p>
-            <p>Los blogs son la mejor
-                forma de compartir
-                informacion y tus ideas.
-                Mucho mas que ir a conferencias 
-                o salir en Youtube.Excepto si eres un
-                rockstar.Pero estadisticamente no lo 
-                eres ... por ahora</p>
     </body>
 </html>
