--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post </h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increeibles que se 
+                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se 
                     pueden hacer con ramas</p>
                     <p>Los blogs son la mejor forma de compartir  informacion y tus ideas
                      Mucho mas que ir a conferencias o salir en Youtube.
